# envbox

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  INSTALL  INSTALL.md  LICENSE  README.md  README.rst  mkdocs.yml  pyproject.toml  ruff.toml  setup.py  tox.ini
.github/workflows/: python-package.yml
docs/: 010_quickstart.md  020_api.md  Makefile  index.md
docs/source/: api.rst  conf.py  index.rst  quickstart.rst
envbox/: __init__.py  base.py  cli.py  detectors.py  envs.py  settings.py  utils.py
src/envbox/: __init__.py  base.py  cli.py  detectors.py  envs.py  settings.py  utils.py
tests/: test_detectors.py  test_envs.py  test_module.py  test_settings.py  test_utils.py
tests/datafixtures/: .env  .env.dev.local  .env.development
tests/testapp/: .env.local
